[package]
name = "hello_world"
version = "0.1.0"
authors = ["Jingyu Wang <beforget@gmail.com>"]

[dependencies]
#peg-syntax-ext = "*"
#peg = { version = "0.3" }
#uuid = { version = "0.3", features = ["v4"]}
#image = "*"
#rustc-serialize = "0.3"
#redis = "*"
#chrono = "*"

#log = "*"
#log4rs = "*"

#rust-ini = "0.9"
#clap = "*"
lazy_static = "*"

#futures = "0.1.14"
#hyper = "0.11.2"
#serde = "^1.0.8"
serde_json = "*"
serde_derive = "*"
tokio-core = "*"
tokio-io = "*"
bytes = "*"
futures = "*"
#sentry = "*"
#sentry-rs = "2"
#regex = "0.2"
#md5 = "0.3.5"
mio = "*"
